src/objects/Payment_Stipulation__c.object
<CustomObject>
    <description>AVB Custom Object - This object shows as a related list under the Litigation Activies object. The purpose of this object is to track payment stipulations for customers in Litigation.</description>
    <fields>
        <fullName>Amount_10__c</fullName>
        <label>Amount 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_11__c</fullName>
        <label>Amount 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_12__c</fullName>
        <label>Amount 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_10__c</fullName>
        <label>Date 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_11__c</fullName>
        <label>Date 11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_12__c</fullName>
        <label>Date 12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Litigation_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation Activity</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipName>R00N60000001YtAHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Due__c</fullName>
        <formula>Amount_1__c  +  Amount_2__c + Amount_3__c + Amount_4__c + Amount_5__c + Amount_6__c + Amount_7__c + Amount_8__c + Amount_9__c + Amount_10__c + Amount_11__c + Amount_12__c + Amount_13__c + Amount_14__c + Amount_15__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verified_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified 10?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified 11?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified 12?</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Stipulation</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payment Stipulation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Stipulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>